bootcamp-drills/cks-drills-setup.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: sample
spec: {}
status: {}
---
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: workloads
spec: {}
status: {}
---
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: external
spec: {}
status: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-svc-ingress
  namespace: external
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /testpath
        pathType: Prefix
        backend:
          service:
            name: frontend-svc
            port:
              number: 80
---
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: challenge-ns
spec: {}
status: {}
---
