bootcamp-drills/netpol-challenge.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: challenge
spec: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: challenge
spec:
  podSelector: {}
  policyTypes:
  - Ingress
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: info
  name: server
  namespace: challenge
spec:
  containers:
  - image: rxmllc/hostinfo
    name: server
    ports:
    - containerPort: 9898
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: client
  name: client
  namespace: default
spec:
  containers:
  - command:
    - tail
    - -f
    - /dev/null
    image: busybox
    name: client
