bootcamp-drills/cks-opa-drill-setup.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opa-controlled
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: opa-controlled-allowedrepos
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - "opa-controlled"
  parameters:
    repos:
      - "docker.io/"
      - "quay.io/"
